--- a/index.html
+++ b/index.html
@@ -3,7 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Silent Video Trimmer</title>
+    <meta name="description" content="Trim your videos online with the Silent Video Trimmer. Upload, set start and end times, and download the trimmed video. Free and easy to use!">
+    <meta name="keywords" content="video trimmer, trim video, online video editor, video editing, video cutter, free video trimmer">
+    <meta name="author" content="Your Name or Company Name">
+    <title>Silent Video Trimmer - Trim Your Videos Online Easily</title>
+
+    <!-- Open Graph Meta Tags for Social Media Sharing -->
+    <meta property="og:title" content="Silent Video Trimmer - Trim Your Videos Online Easily">
+    <meta property="og:description" content="Trim your videos online with the Silent Video Trimmer. Upload, set start and end times, and download the trimmed video. Free and easy to use!">
+    <meta property="og:image" content="https://silent-video-trimmer.netlify.app/image.png">
+    <meta property="og:url" content="https://silent-video-trimmer.netlify.app/index.html">
+
+    <!-- Twitter Card Meta Tags for Social Media Sharing -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Silent Video Trimmer - Trim Your Videos Online Easily">
+    <meta name="twitter:description" content="Trim your videos online with the Silent Video Trimmer. Upload, set start and end times, and download the trimmed video. Free and easy to use!">
+    <meta name="twitter:image" content="https://silent-video-trimmer.netlify.app/image.png">
+    <a href="/about.html" title="Learn more about Silent Video Trimmer">Learn more about how to use Silent Video Trimmer</a>
+
+    
+    <!-- JSON-LD Schema Markup for SEO -->
+    <script type="application/ld+json">
+        {
+            "@context": "http://schema.org",
+            "@type": "WebApplication",
+            "name": "Silent Video Trimmer",
+            "description": "Trim your videos online with the Silent Video Trimmer. Upload, set start and end times, and download the trimmed video. Free and easy to use!",
+            "url": "https://silent-video-trimmer.netlify.app/index.html",
+            "image": "https://silent-video-trimmer.netlify.app/image.png",
+            "applicationCategory": "Utility",
+            "operatingSystem": "Web",
+            "browserRequirements": "Modern Web Browser",
+            "author": {
+                "@type": "Personal",
+                "name": "Krishna Ganguri"
+            },
+            "sameAs": "https://your-social-media-profile-link"
+        }
+    </script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
