--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
             "sameAs": "https://your-social-media-profile-link"
         }
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4227618528653068"
+     crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
