--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="twitter:description" content="Trim your videos online with the Silent Video Trimmer. Upload, set start and end times, and download the trimmed video. Free and easy to use!">
     <meta name="twitter:image" content="https://silent-video-trimmer.netlify.app/image.png">
     <a href="/about.html" title="Learn more about Silent Video Trimmer">Learn more about how to use Silent Video Trimmer</a>
-
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     
     <!-- JSON-LD Schema Markup for SEO -->
     <script type="application/ld+json">
@@ -47,7 +47,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>🎬 Silent Video Trimmer</h2>
+        <h1>🎬 Silent Video Trimmer</h1>
         
         <!-- Video Upload Section -->
         <input type="file" id="videoInput" accept="video/*">
