--- a/about.html
+++ b/about.html
@@ -5,12 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Learn more about Silent Video Trimmer, an easy-to-use online tool for trimming your videos with customizable start and end times.">
     <meta name="keywords" content="video trimmer, about, video cutter, online video editor, video editing tool">
-    <meta name="author" content="Your Name or Company Name">
+    <meta name="author" content="Krishna Ganguri">
+    <meta name="robots" content="index, follow">
     <title>About - Silent Video Trimmer</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
+    
+
+    <section class="container">
+
+        <header>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -19,8 +24,6 @@
             </ul>
         </nav>
     </header>
-
-    <section class="container">
         <h1>About Silent Video Trimmer</h1>
         <p>Silent Video Trimmer is a free and easy-to-use online tool that lets you trim your videos quickly without installing any software. You can upload a video, set the start and end times, and download the trimmed version of your video in just a few clicks.</p>
         
