--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="description" content="Trim your videos online with the Silent Video Trimmer. Upload, set start and end times, and download the trimmed video. Free and easy to use!">
     <meta name="keywords" content="video trimmer, trim video, online video editor, video editing, video cutter, free video trimmer">
     <meta name="author" content="Krishna Ganguri">
-    <title>Silent Video Trimmer - Trim Your Videos Online Free Easily</title>
+    <title>Silent Video Trimmer – Trim Videos Online Free & Fast!</title>
 
     <!-- Open Graph Meta Tags for Social Media Sharing -->
     <meta property="og:title" content="Silent Video Trimmer - Trim Your Videos Online Easily">
     <meta property="og:description" content="Trim your videos online with the Silent Video Trimmer. Upload, set start and end times, and download the trimmed video. Free and easy to use!">
     <meta property="og:image" content="https://silent-video-trimmer.netlify.app/image.png">
-    <meta property="og:url" content="https://silent-video-trimmer.netlify.app/index.html">
+    <meta property="og:url" content="https://silent-video-trimmer.netlify.app">
 
     <!-- Twitter Card Meta Tags for Social Media Sharing -->
     <meta name="twitter:card" content="summary_large_image">
@@ -45,11 +45,27 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    
     <div class="container">
         <header>
-            <h1>Silent Video Trimmer</h1>
-            <p>The easiest way to trim videos online for free!</p>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="https://silent-video-trimmer.netlify.app/">Try Now</a></li>
+                </ul>
+            </nav>
         </header>
+        <h1>🎬 Silent Video Trimmer</h1>
+        <p>Trim your videos online easily, without downloading software.</p>
+        <section id="how-it-works">
+            <h2>How It Works</h2>
+            <ol>
+                <li><strong>Upload a Video</strong> – Choose a file from your device.</li>
+                <li><strong>Select Start & End Time</strong> – Adjust the video to the desired length.</li>
+                <li><strong>Trim & Download</strong> – Get your trimmed video instantly.</li>
+            </ol>
+        </section>
         <section>
         <!-- Video Upload Section -->
         <input type="file" id="videoInput" accept="video/*">
@@ -132,7 +148,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 Silent Video Trimmer. All rights reserved.</p>
+        <p>&copy; 2025 Silent Video Trimmer. All rights reserved. | <a href="sitemap.xml">Sitemap</a> | <a href="robots.txt">Robots.txt</a></p>
     </footer>
     </div>
 
