--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script type="text/javascript" data-cmp-ab="1" src="https://cdn.consentmanager.net/delivery/autoblocking/ad362b324251d.js" data-cmp-host="a.delivery.consentmanager.net" data-cmp-cdn="cdn.consentmanager.net" data-cmp-codesrc="16"></script>
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-VNE33ZRPSQ"></script>
 <script>
@@ -18,7 +19,7 @@
     <meta name="robots" content="index, follow">
     <title>About - Silent Video Trimmer</title>
     <link rel="stylesheet" href="styles.css">
-</head>
+   </head>
 <body>
     
 
